# cognix

./: .gitignore  DOCUMENTATION.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml
cognix/: __init__.py  auth.py
cognix/datasets/: __init__.py
cognix/models/: __init__.py  base.py  chat.py  classifier.py  vision.py
cognix/trainer/: __init__.py
tests/: test_inference.py
