[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognix-ai"
version = "0.1.1"
authors = [
  { name="Gerson Buenahora", email="dalusx64@gmail.com" },
]
description = "A simplified AI library for model management, inference, and fine-tuning."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformers",
    "datasets",
    "peft",
    "accelerate",
    "bitsandbytes",
    "torch",
    "torchvision",
    "huggingface_hub",
    "pillow",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/golemgamer/cognix"
"Bug Tracker" = "https://github.com/golemgamer/cognix/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cognix*"]
